エレメンタルボウをリワークし、スクロールスロットベース運用及び共通オーバーヒートを対応
(cherry picked from commit 42957470baab31168e86481f681e9e9304072e50)